--- a/index.html
+++ b/index.html
@@ -447,18 +447,18 @@ const DB = {
             { id: "A223", t: "Airbus A220-300", op: "Swiss", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
             { id: "A319", t: "Airbus A319-100", op: "Lufthansa", s: 138, r: "5h 00m", fuel: "14.100t", cat: "138" },
             { id: "A320", t: "Airbus A320-200", op: "Lufthansa", s: 168, r: "6h 00m", fuel: "16.000t", cat: "168" },
-            { id: "A320N", t: "Airbus A320neo", op: "Lufthansa", s: 180, r: "6h 30m", fuel: "16.200t", cat: "180" },
+            { id: "A320 neo", t: "Airbus A320neo", op: "Lufthansa", s: 180, r: "6h 30m", fuel: "16.200t", cat: "180" },
             { id: "A321", t: "Airbus A321-200", op: "Lufthansa", s: 205, r: "5h 50m", fuel: "19.640t", cat: "205" },
-            { id: "A21N", t: "Airbus A321neo", op: "Lufthansa", s: 215, r: "7h 30m", fuel: "19.640t", cat: "215" },
-            { id: "CRJ9", t: "Bombardier CRJ-900", op: "Lufthansa CityLine", s: 90, r: "3h 30m", fuel: "7.950t", cat: "90" },
-            { id: "A333", t: "Airbus A330-300", op: "Lufthansa", s: 255, r: "11h 30m", fuel: "83.400t", cat: "255" },
-            { id: "A343", t: "Airbus A340-300", op: "Lufthansa", s: 279, r: "13h 30m", fuel: "", cat: "279" },
-            { id: "A346", t: "Airbus A340-600", op: "Lufthansa", s: 297, r: "14h 30m", fuel: "", cat: "297" },
-            { id: "A359", t: "Airbus A350-900", op: "Lufthansa", s: 293, r: "15h 00m", fuel: "83.000t", cat: "293" },
-            { id: "B744", t: "Boeing 747-400", op: "Lufthansa", s: 371, r: "13h 00m", fuel: "", cat: "371" },
-            { id: "B748", t: "Boeing 747-8I", op: "Lufthansa", s: 364, r: "14h 00m", fuel: "98.5t", cat: "364" },
-            { id: "B789", t: "Boeing 787-9", op: "Lufthansa", s: 294, r: "14h 00m", fuel: "", cat: "294" },
-            { id: "B77L", t: "Boeing 777F", op: "Lufthansa Cargo", s: 0, r: "10h 30m", fuel: "", cat: "Cargo" },
+            { id: "A321 neo", t: "Airbus A321neo", op: "Lufthansa", s: 215, r: "7h 30m", fuel: "19.640t", cat: "215" },
+            { id: "CRJ900", t: "Bombardier CRJ-900", op: "Lufthansa CityLine", s: 90, r: "3h 30m", fuel: "7.950t", cat: "90" },
+            { id: "A330 - 300", t: "Airbus A330-300", op: "Lufthansa", s: 255, r: "11h 30m", fuel: "83.400t", cat: "255" },
+            { id: "A340 - 200", t: "Airbus A340-200", op: "Lufthansa", s: 279, r: "13h 30m", fuel: "", cat: "279" },
+            { id: "A340 - 600", t: "Airbus A340-600", op: "Lufthansa", s: 297, r: "14h 30m", fuel: "", cat: "297" },
+            { id: "A350 - 900", t: "Airbus A350-900", op: "Lufthansa", s: 293, r: "15h 00m", fuel: "83.000t", cat: "293" },
+            { id: "B747 - 400", t: "Boeing 747-400", op: "Lufthansa", s: 371, r: "13h 00m", fuel: "", cat: "371" },
+            { id: "B747 - 800", t: "Boeing 747-8I", op: "Lufthansa", s: 364, r: "14h 00m", fuel: "98.5t", cat: "364" },
+            { id: "B787 - 9", t: "Boeing 787-9", op: "Lufthansa", s: 294, r: "14h 00m", fuel: "", cat: "294" },
+            { id: "B777F", t: "Boeing 777F", op: "Lufthansa Cargo", s: 0, r: "10h 30m", fuel: "", cat: "Cargo" },
 
         ],
         ROUTES: [
