--- a/index.html
+++ b/index.html
@@ -729,7 +729,193 @@ const DB = {
 { al: "Lufthansa", d: "EDDF", a: "KIAD", t: 8.26, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
         ],
         COORDS: {
-            "EDDF":[50.03,8.56], "EDDM":[48.35,11.77], "LSZH":[47.45,8.55], "LOWW":[48.11,16.56], "EKCH":[55.61,12.65], "EGLL":[51.47,-0.45], "KJFK":[40.64,-73.77], "KLAX":[33.94,-118.40], "WSSS":[1.36,103.99], "VTBS":[13.69,100.75], "LFPG":[49.00,2.55], "KEWR":[40.68,-74.17], "EVRA":[56.92,23.97], "EDDL":[51.28,6.76], "LEPA":[39.55,2.73], "FIMP":[-20.43,57.68], "MCO":[28.43,-81.30], "VHHH":[22.30,113.91], "EDDP":[51.42,12.23], "KCVG":[39.04,-84.66], "LIRF":[41.80,12.24], "EFHK":[60.31,24.96], "RJTT":[35.54,139.77], "ENGM":[60.19,11.10], "CUN":[21.04,-86.87], "LTAI":[36.89,30.80], "LIPZ":[45.50,12.35], "EBBR":[50.90,4.48], "CPT":[-33.97,18.60], "EDDH":[53.63,9.98], "NCE":[43.66,7.21], "BGO":[60.29,5.21], "OMDB":[25.25,55.36]
+         // --- ХАБЫ ---
+"EDDF": [50.03, 8.56],
+"EDDM": [48.35, 11.78],
+
+// --- ГЕРМАНИЯ ---
+"EDDB": [52.36, 13.50],
+"EDDC": [51.13, 13.76],
+"EDDG": [52.13, 7.68],
+"EDDH": [53.63, 9.98],
+"EDDK": [50.86, 7.14],
+"EDDL": [51.28, 6.76],
+"EDDN": [49.49, 11.07],
+"EDDP": [51.43, 12.23],
+"EDDS": [48.68, 9.22],
+"EDDV": [52.46, 9.68],
+"EDDW": [53.04, 8.78],
+"EDXW": [54.91, 8.34],
+
+// --- ЕВРОПА ---
+"BIKF": [63.98, -22.60],
+"EBBR": [50.90, 4.48],
+"EGBB": [52.45, -1.74],
+"EGCC": [53.35, -2.27],
+"EGJJ": [49.20, -2.19],
+"EGLL": [51.47, -0.45],
+"EGNT": [55.03, -1.69],
+"EGPF": [55.87, -4.43],
+"EGPH": [55.95, -3.37],
+"EHAM": [52.31, 4.76],
+"EIDW": [53.42, -6.27],
+"EKBI": [55.74, 9.15],
+"EKCH": [55.61, 12.65],
+"ELLX": [49.62, 6.20],
+"ENBR": [60.29, 5.21],
+"ENGM": [60.19, 11.10],
+"ENTC": [69.68, 18.91],
+"ENZV": [58.87, 5.63],
+"EETN": [59.41, 24.83],
+"EFHK": [60.31, 24.93],
+"EFIV": [68.60, 27.40],
+"EFKS": [65.98, 29.23],
+"EFKT": [67.70, 24.84],
+"EFRO": [66.56, 25.83],
+"EPBY": [53.09, 17.97],
+"EPGD": [54.37, 18.46],
+"EPKK": [50.07, 19.78],
+"EPKT": [50.47, 19.08],
+"EPLL": [51.72, 19.39],
+"EPPO": [52.42, 16.82],
+"EPWA": [52.16, 20.96],
+"ESGG": [57.66, 12.28],
+"ESSA": [59.64, 17.91],
+"EVRA": [56.92, 23.97],
+"EYVI": [54.63, 25.28],
+"LATI": [41.41, 19.72],
+"LBSF": [42.69, 23.41],
+"LCLK": [34.87, 33.62],
+"LDZA": [45.74, 16.06],
+"LEAL": [38.28, -0.55],
+"LEBB": [43.30, -2.91],
+"LEBL": [41.29, 2.08],
+"LEMD": [40.47, -3.56],
+"LEMG": [36.67, -4.49],
+"LEMH": [39.86, 4.21],
+"LEPA": [39.55, 2.73],
+"LEVC": [39.48, -0.48],
+"LEZL": [37.41, -5.89],
+"LFBO": [43.62, 1.36],
+"LFLM": [43.43, 5.21], // Marseille
+"LFLL": [45.72, 5.08],
+"LFML": [43.43, 5.21],
+"LFMN": [43.66, 7.21],
+"LFPG": [49.00, 2.55],
+"LFRS": [47.15, -1.61],
+"LGAV": [37.93, 23.94],
+"LHBP": [47.43, 19.23],
+"LHDC": [47.48, 21.61],
+"LICC": [37.46, 15.06],
+"LICJ": [38.17, 13.09],
+"LIMC": [45.63, 8.72],
+"LIML": [45.44, 9.27],
+"LIPE": [44.53, 11.28],
+"LIPY": [45.39, 11.84],
+"LIPZ": [45.50, 12.35],
+"LIRF": [41.80, 12.23],
+"LIRN": [40.88, 14.29],
+"LJLJ": [46.22, 14.45],
+"LKPR": [50.10, 14.26],
+"LMML": [35.85, 14.47],
+"LPFR": [37.01, -7.96],
+"LPPR": [41.23, -8.66],
+"LPPT": [38.77, -9.13],
+"LQSA": [43.82, 18.33],
+"LRCL": [46.78, 23.68],
+"LROP": [44.57, 26.08],
+"LRSB": [45.78, 24.13],
+"LSGG": [46.23, 6.10],
+"LSZH": [47.45, 8.54],
+"LTAC": [40.12, 32.99],
+"LTFM": [41.27, 28.74],
+"LUKK": [46.92, 28.93],
+"LYBE": [44.81, 20.30],
+
+// --- АМЕРИКА ---
+"CYUL": [45.47, -73.74],
+"CYVR": [49.19, -123.18],
+"CYYZ": [43.67, -79.62],
+"KATL": [33.64, -84.42],
+"KAUS": [30.19, -97.66],
+"KBOS": [42.36, -71.00],
+"KCLT": [35.21, -80.94],
+"KDFW": [32.89, -97.04],
+"KDEN": [39.86, -104.67],
+"KDTW": [42.21, -83.35],
+"KIAH": [29.98, -95.33],
+"KIAD": [38.94, -77.45],
+"KJFK": [40.64, -73.77],
+"KLAX": [33.94, -118.40],
+"KMIA": [25.79, -80.28],
+"KORD": [41.97, -87.90],
+"KRDU": [35.87, -78.78],
+"KSAN": [32.73, -117.18],
+"KSFO": [37.61, -122.37],
+"KSEA": [47.44, -122.30],
+"KSTL": [38.74, -90.37],
+"KEWR": [40.69, -74.17],
+"MMGL": [20.52, -103.30],
+"MMMX": [19.43, -99.07],
+"MMMY": [25.77, -100.10],
+"MMSM": [19.33, -99.27],
+"MROC": [9.99, -84.21],
+"SAEZ": [-34.82, -58.53],
+"SBGL": [-22.81, -43.25],
+"SBGR": [-23.43, -46.47],
+"SBKP": [-23.00, -47.13],
+"SKBO": [4.70, -74.14],
+
+// --- АЗИЯ, АФРИКА, БЛИЖНИЙ ВОСТОК ---
+"DAAG": [36.69, 3.21],
+"DNAA": [9.00, 7.26],
+"DNMM": [6.57, 3.32],
+"DTTA": [36.85, 10.22],
+"FACT": [-33.97, 18.60],
+"FAOR": [-26.13, 28.24],
+"FNBJ": [-12.80, 13.52], // Catumbela (Benguela)
+"GMMN": [33.36, -7.58],
+"HECA": [30.12, 31.40],
+"HKJK": [-1.31, 36.92],
+"LLBG": [32.01, 34.88],
+"OERK": [24.95, 46.69],
+"OJAI": [31.72, 35.99],
+"OMDB": [25.25, 55.36],
+"OMDW": [24.89, 55.17],
+"RKSI": [37.46, 126.44],
+"RJBB": [34.43, 135.23],
+"RJTT": [35.54, 139.78],
+"UBBB": [40.46, 50.04],
+"UDYZ": [40.14, 44.39],
+"UGTB": [41.66, 44.95],
+"VABB": [19.08, 72.86],
+"VHHH": [22.30, 113.91],
+"VIDP": [28.56, 77.10],
+"VOBL": [13.19, 77.70],
+"VOHS": [17.24, 78.42],
+"VOMM": [12.99, 80.18],
+"VTBS": [13.69, 100.75],
+"WSSS": [1.36, 103.99],
+"ZBAA": [40.07, 116.58],
+"ZHCC": [34.51, 113.84],
+"ZSPD": [31.14, 121.80],
+"ZUUU": [30.57, 103.94],
+
+// --- СНГ (Suspended) ---
+"OIIE": [35.41, 51.15],
+"OLBA": [33.82, 35.48],
+"OOMS": [23.59, 58.28],
+"OTHH": [25.27, 51.60],
+"UUDD": [55.40, 37.90],
+"ULLI": [59.80, 30.26],
+"UKBB": [50.34, 30.89],
+"UKLL": [49.81, 23.95],
+"UKOO": [46.42, 30.67],
+"WMKK": [2.74, 101.70],
+"WIII": [-6.12, 106.65],
+"ZYTX": [41.63, 123.48],
+"ZSQD": [36.26, 120.37],
+"RKPK": [35.17, 128.93]
         }
     };
 
