--- a/index.html
+++ b/index.html
@@ -727,6 +727,128 @@ const DB = {
 { al: "Lufthansa", d: "EDDF", a: "KSEA", t: 10.29, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "KSTL", t: 9.24, ac: "A330 - 300", fuel: "83.400t", s: "Active" },
 { al: "Lufthansa", d: "EDDF", a: "KIAD", t: 8.26, ac: "B747 - 8", fuel: "98.500t", s: "Active" },
+
+ // --- SWISS INTERNATIONAL AIR LINES (Final Fleet with Fuel) ---
+
+{ al: "Swiss", d: "LSZH", a: "LIBR", t: 1.33, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LIBD", t: 1.28, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LYBE", t: 1.26, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDB", t: 1.06, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "VTBS", t: 11.23, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EKBI", t: 1.27, ac: "Embraer E190 - E2", fuel: "10.120t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "VOBL", t: 9.05, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "VABB", t: 8.10, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KBOS", t: 7.43, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDW", t: 1.07, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EBBR", t: 1.00, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EGBB", t: 1.32, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LFBD", t: 1.17, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LHBP", t: 1.16, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LROP", t: 1.58, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "HECA", t: 3.37, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KORD", t: 9.07, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EKCH", t: 1.27, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "HTDA", t: 8.29, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "VIDP", t: 7.38, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KDEN", t: 10.29, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "OMDB", t: 6.17, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EIDW", t: 1.57, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LDDU", t: 1.26, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDL", t: 0.55, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDC", t: 1.00, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EGPH", t: 1.53, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LIRQ", t: 1.00, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDF", t: 1.05, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EPGD", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LSGG", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "ESGG", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LOWG", t: 0, ac: "Embraer E190 - E2", fuel: "10.120t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDH", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDV", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "VHHH", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LGIR", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "FAOR", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EPKK", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LGKO", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LCLK", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LPPT", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LJLJ", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EGLC", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EGLL", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KLAX", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "ELLX", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LFLL", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LEMD", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LEMG", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EGCC", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LFML", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KMIA", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LIMC", t: 0, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "CYUL", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDM", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "OOMS", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "HKJK", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LFRS", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LIRN", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KJFK", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KEWR", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LFMN", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LYNI", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDN", t: 0, ac: "Embraer E190 - E2", fuel: "10.120t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LIEO", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "ENGM", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LICJ", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LEPA", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LFPG", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LPPR", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LKPR", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "BKPR", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LDPL", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LGRP", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LIRF", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KSFO", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "MROC", t: 0, ac: "A340 - 600", fuel: "116.600t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "SBGR", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LQSA", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "ZSPD", t: 0, ac: "A340 - 600", fuel: "116.600t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "WSSS", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LWSK", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LBSF", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LDSP", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "ESSA", t: 0, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDS", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDXW", t: 0, ac: "Embraer E190 - E2", fuel: "10.120t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EETN", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LLBG", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LGTS", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LATI", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "RJAA", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "CYYZ", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LEVC", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "CYVR", t: 0, ac: "A340 - 600", fuel: "116.600t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LIPZ", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LOWW", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EYVI", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EPWA", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "KIAD", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LDZA", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EHAM", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LEBL", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LGAV", t: 0, ac: "A321", fuel: "19.640t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDK", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EDDP", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LOWS", t: 0, ac: "Embraer E190 - E2", fuel: "10.120t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LICC", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LMML", t: 0, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LPFR", t: 0, ac: "A320", fuel: "16.000t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "SAEZ", t: 0, ac: "B777 - 300ER", fuel: "109.150t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "ZBAA", t: 0, ac: "A330 - 200", fuel: "83.400t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LICA", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LGKR", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LGZA", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "LEIB", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "GMMN", t: 0, ac: "A320 neo", fuel: "16.200t", s: "Active" },
+{ al: "Swiss", d: "LSZH", a: "EGJJ", t: 0, ac: "A220 - 300", fuel: "17.4t", s: "Active" },
         ],
         COORDS: {
          // --- ХАБЫ ---
